# scout

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json
backend/: .env.example  .gitignore  README.md  claude_client.py  crustdata.py  main.py  models.py  observability.py  pyproject.toml  sse_helpers.py
backend/evals/: fixtures.py  test_prompt_builder.py  test_ranking.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CopyButton.tsx  ErrorBanner.tsx  FounderCard.tsx  ProgressFeed.tsx  ResultsGrid.tsx  SearchForm.tsx
frontend/hooks/: useFounderSearch.ts
frontend/lib/: constants.ts  types.ts
