[project]
name = "scout-backend"
version = "0.1.0"
description = "Founder Discovery Agent backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "langfuse>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["llm: tests that make real Claude API calls"]
